# pineapple-pen

./: .gitignore  Justfile  LICENSE  README.md  conv.sh  converttree.py  pyproject.toml  test.ase
.github/workflows/: CI.yml
assets/: archetypes.toml  buttons.ase  card.aseprite  card_art.json  convo.pkl  enemies.json  events.toml  fun.yaml  height_lookup.pkl  household_events.toml  lore.txt  mask.npy  name_generator.pkl  preprocess.json  prompts.md  ps.lua  ps.lua54.lua  secrets.toml  sprites.pyxres  strings.toml  test.pkl  test_locations.toml  writer_persona.toml
assets/architecture/: architectural_elements.toml  lit.toml  locations.toml
assets/cards/: bundle.safetensors  four-of-spades.ase
assets/demo/: places.json
assets/includes/: anime_addressing.md  api.md  growth_chart.md  interpret_status_effects.md  judge.md  main_prompt.md  rulebook.md  status_effects.md
assets/includes/poems/: our-land.md  the-snow-storm.md  the-waste-land.txt
assets/poems/: wild-geese.md
assets/students/: mbti.toml  normal_archetypes.toml  special_archetypes.toml
recordings/2024-07-27-01-29-19/2024-07-27-01-29-19-0000/: frames.safetensors.zstd
recordings/2024-07-27-01-29-19/2024-07-27-01-29-19-0001/: frames.safetensors.zstd
recordings/2024-07-27-01-29-19/2024-07-27-01-29-19-0002/: frames.safetensors.zstd
recordings/2024-07-27-02-08-02/2024-07-27-02-08-02-0000/: events.json  frames.safetensors.zstd
recordings/2024-07-27-02-08-02/2024-07-27-02-08-02-0001/: frames.safetensors.zstd
recordings/2024-07-27-02-08-02/2024-07-27-02-08-02-0002/: frames.safetensors.zstd
recordings/2024-07-27-17-53-18/2024-07-27-17-53-18-0000/: frames.safetensors.zstd
recordings/2024-07-27-17-53-18/2024-07-27-17-53-18-0001/: frames.safetensors.zstd
recordings/2024-07-27-17-53-18/2024-07-27-17-53-18-0002/: frames.safetensors.zstd
recordings/2024-07-27-17-53-18/2024-07-27-17-53-18-0003/: frames.safetensors.zstd
saves/: students.yml
science/: names_explore.ipynb
scripts/: sancheck.py  to_frames.py  try_global_components.py  try_jinja.py  try_prompt_format.py  try_tanvity.py
src/genio/: __init__.py  architect.py  artifacts.py  base.py  battle.py  battler.py  bezier.py  card.py  card_utils.py  cmd.py  components.py  constants.py  dto.py  effect.py  eventbus.py  family.py  fashion.py  follower_tooltip.py  funccall.py  game.py  gamestate.py  geo.py  glueyaml.py  graphics.py  gui.py  gym.py  height_chart.py  height_descript.py  imply.py  kids.py  layout.py  llm.py  main.py  namecheck.py  namegen.py  persona.py  predef.py  ps.py  ps_edit.py  robustyaml.py  (+20 more)
src/genio/battle/: api.md  battler.py  inst.md  parsing.py
src/genio/cli/: generate_students.py
src/genio/concepts/: architect.py  family.py  fashion.py  geo.py  school_docket.py
src/genio/core/: __init__.py  agent.py  agent_cache.py  base.py  card.py  clock.py  components.py  event.py  funccall.py  global_components.py  gym.py  llm.py  map.py  memory.py  prototypes.py  sim.py  student.py  tantivy.py
src/genio/gears/: async_visualizer.py  audio_mixer.py  button.py  card_printer.py  config_menu.py  fontpack.py  h264_encoder.py  icon_button.py  map_pin.py  maths_utils.py  median_filter.py  papercut.py  paperlike.py  recorder.py  signpost.py  (+5 more)
tests/: test_architect.py  test_artifacts.py  test_base.py  test_battle.py  test_battler.py  test_card.py  test_core.py  test_effect.py  test_geo.py  test_imply.py  test_namegen.py  test_robustyaml.erryaml.yaml  test_robustyaml.py  test_student.py  test_tween.py
tests/integration/: test_effect_apply.py
(+7 files in other folders)
