[tool.poetry]
name = "genio"
version = "0.1.0"
description = ""
authors = ["RuneBlaze <runeblaze@excite.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
langchain = "0.2.0"
icecream = "^2.1.3"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
tomlkit = "^0.12.3"
faker = "^23.2.1"
jupyter = "^1.0.0"
sentence-transformers = "^2.3.1"
structlog = "^24.1.0"
langchain-google-genai = "^1.0.4"
openai = "^1.12.0"
wandb = "^0.16.3"
humanize = "^4.9.0"
pyahocorasick = "^2.0.0"
rich = "^13.7.0"
jinja2 = "^3.1.3"
typer = "^0.9.0"
tantivy = "^0.21.0"
json5 = "^0.9.18"
newrelic = "^9.8.0"
logfire = "^0.35.0"
rocksdict = "^0.3.23"
mistune = "^3.0.2"
streamlit = "^1.35.0"
watchdog = "^4.0.1"
langchain-groq = "^0.1.5"
streamlit-pydantic = {git = "https://github.com/LukasMasuch/streamlit-pydantic.git", rev = "main"}
boltons = "^24.0.0"
pyxel = "^2.0.13"
pyxelunicode = "^1.0.4"
pillow = "9.5.0"
smallperm = "^0.1.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest = "^8.0.1"

[tool.ruff.lint]
# Add "Q" to the list of enabled codes.
select = ["I", "UP","E4", "E7", "E9", "F", "TID252"]

[tool.ruff]
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
