[tool.poetry]
name = "genio"
version = "0.1.0"
description = ""
authors = ["RuneBlaze <runeblaze@excite.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = "0.2.0"
icecream = "^2.1.3"
pandas = "*"
openpyxl = "^3.1.2"
tomlkit = "^0.12.3"
jupyter = "^1.0.0"
structlog = "^24.1.0"
langchain-google-genai = "^1.0.4"
openai = "^1.12.0"
humanize = "^4.9.0"
rich = "^13.7.0"
jinja2 = "^3.1.3"
typer = "^0.9.0"
json5 = "^0.9.18"
logfire = "^0.35.0"
mistune = "^3.0.2"
boltons = "^24.0.0"
pyxel = "^2.1.4"
pillow = "9.5.0"
smallperm = "^0.1.10"
parse = "^1.20.2"
pyxelxl = "^0.0.18"
safetensors = "^0.4.3"
lupa = "^2.2"
pytweening = "^1.2.0"
tiktoken = "^0.7.0"
atomicx = "^0.0.12"
embeddings = "^0.0.8"
cramjam = "^2.8.3"
einops = "^0.8.0"
webp = "^0.4.0"
hnswlib = "^0.8.0"
soundfile = "^0.12.1"
librosa = "^0.10.2.post1"
langchain-openai = "^0.1.23"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest = "^8.0.1"
pytest-sugar = "^1.0.0"

[tool.ruff.lint]
select = ["I", "UP","E4", "E7", "E9", "F", "TID252"]

[tool.ruff]
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
